# talantau.kz

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
talantau/: landing.html  main.py  register.html
talantau/auth/: dependencies.py  jwt_handler.py  routes.py
talantau/db/: base.py  models.py
talantau/schemas/: usercreate.py
